# dummy-tutorial

./: .gitignore  README.md  test-github-action
.github/workflows/: github-actions-demo.yml  test-inputs.yaml
Ansible/: install_apache.yml  inventory  remove_apache.yml
Bash/: example3.txt  example_file.txt  output.html  simple-task.sh
Docker/: Dockerfile
Python/flask-html/: README.md  app.py
Python/flask-web-app/: Dockerfile  README.md  pyproject.toml
Python/flask-web-app/flask_web_app_tutorial.egg-info/: SOURCES.txt  requires.txt
Python/flask-web-app/instance/: database.db
Python/flask-web-app/k8s/: README.md
Python/rest-api-exercise/: pyproject.toml
Python/sqlalchemy-python/: README.md  pyproject.toml
Python/sqlalchemy-python/src/sqlalchemy_python/: __init__.py
Terraform/: main.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvar
Terraform/create-ubuntu-vm-in-azaure/: README.md
full-stack-example/: README.md
full-stack-example/flask-html/: app.py  pyproject.toml
full-stack-example/flask-html/templates/: form.html  index.html
full-stack-example/flask-web-app/: pyproject.toml  setup.py
full-stack-example/flask-web-app/flask_web_app_tutorial.egg-info/: PKG-INFO
full-stack-example/flask-web-app/k8s/deployments/: deployment.yaml
full-stack-example/flask-web-app/src/flask_web_app_tutorial/: __init__.py
full-stack-example/rest-api-exercise/: README.md  app.py
full-stack-example/sqlalchemy-python/: main.py  mydb.db
helm-charts/: README.md
helm-charts/webapp1/: values.yaml
helm-charts/webapp1/templates/: configmap.yaml  deployment.yaml  namespace.yaml  service.yaml
packer/: README.md
packer/examples/aws-ubuntu-ami/: aws-ubuntu.pkr.hcl
packer/examples/aws-windows-ami/: README.md  sample_script.ps1  variables.pkr.hcl  windows.pkr.hcl
packer/examples/azure-windows-image/: README.md  variables.pkr.hcl  windows-2019.pkr.hcl
packer/examples/terraform-example/: README.md  (+1 more)
(+11 files in other folders)
