[project]
name = "rest-api-exercise"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Thawngzapum Lian", email = "thawngv@gmail.com" }
]
dependencies = [
    "cowsay>=6.1",
    "requests>=2.32.3",
    "flask>=3.0.3",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rest_api_exercise"]
