[project]
name = "sqlalchemy-python"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Thawngzapum Lian", email = "thawngv@gmail.com" }
]
dependencies = [
    "sqlalchemy>=2.0.35",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sqlalchemy_python"]
