[project]
name = "flask-web-app-tutorial"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Thawngzapum Lian", email = "thawngv@gmail.com" }
]
dependencies = [
    "flask>=3.0.3",
    "sqlalchemy>=2.0.35",
    "flask-sqlalchemy>=3.1.1",
    "flask-login>=0.6.3",
    "setuptools>=75.1.0",
    "pip>=24.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/flask_web_app_tutorial"]
